given  task completed